# djangox_customise

./: Snack.md  pyproject.toml
config/: urls.py
snacks/: models.py  views.py
snacks/migrations/: 0001_initial.py
