[tool.poetry]
name = "djangox_customise"
version = "0.1.0"
description = ""
authors = ["monaSalih <monaalobisat@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "3.1.4"
django-allauth = "0.43.0"
django-crispy-forms = "1.10.0"
django-debug-toolbar = "3.2"
whitenoise = "5.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
